# shoppin-backend-task

./: README.md
backend/: .env.sample  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
backend/backend/: celery.py  settings.py
backend/backend/management/commands/: crawl.py
backend/crawler/: admin.py  models.py
backend/crawler/migrations/: 0001_initial.py  0002_bewakoofproduct.py
backend/spiders/: amazon.py  bewakoof.py
