[tool.poetry]
name = "shoppin-backend"
version = "0.1.0"
description = ""
authors = ["Shubhashish Dixit <thisisshub@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
celery = {extras = ["redis"], version = "^5.4.0"}
scrapy = "^2.12.0"
python-dotenv = "^1.0.1"
scrapy-selenium = "^0.0.7"
selenium = "^4.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
